Peer discovery almost there

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,13 @@ services:
      - test
     ports:
       - "9009"
+  n6:
+    build: .
+    networks:
+     - test
+    ports:
+      - "9009"
+      
 
 networks:
   test:
